salesforce/force-app/main/default/objects/Sync_Source__mdt/Sync_Source__mdt.object-meta.xml
<CustomObject>
    <label>Sync Source</label>
    <pluralLabel>Sync Sources</pluralLabel>
    <description>Custom Metadata Type: one record per mailbox to sync, plus the page size and
        time ceiling for that source. Deployed with a change set / package like any other
        metadata, unlike a Custom Setting — which is the reason it was chosen over one, on top
        of being queryable from a Flow without Apex.</description>
</CustomObject>