salesforce/force-app/main/default/objects/Sync_Source__mdt/fields/Mailbox_Key__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Key__c</fullName>
    <label>Mailbox Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Logical key matching Sync_Checkpoint__c.Name for this source. Not a real mailbox address — this is offline config for the demo, no org is ever contacted.</description>
</CustomField>