salesforce/force-app/main/default/objects/Sync_Source__mdt/fields/Named_Credential_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_API_Name__c</fullName>
    <label>Named Credential API Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Which Named Credential DeltaSyncJob should call out through. No secret ever appears in this record or in code.</description>
</CustomField>