salesforce/force-app/main/default/objects/Sync_Source__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <label>Page Size</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>50</defaultValue>
</CustomField>